tests/NormalTests/paczka1/small_fuzzy/64073170.err
Error in line 1: AITSUN9GdSt S855 11,1
Error in line 9: AITSUN9GdSt S877 N7,5
